# agent-testing

./: README.md  app.py  main.py  pyproject.toml
ReAct_agent/: implementation.py  settings.py
agents/: agentic_rag.py
rag/: .env.example  README.md  agentic_rag.py  database.py  models.py  pyproject.toml
rag/data/: datagrab.py
