[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.124.2",
    "google-genai>=1.55.0",
    "neon>=0.1.2",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.30.1",
    "sqlmodel>=0.0.27",
]
